--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<html>Tech Suport And About</html>
-<Script:module><Samp></Samp></Script:module>
+<html><header>Tech Suport</header> Tech Suport And About</small></html>
