--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<html><title>Tech Suport And About><h1></html>
+<html><title>Tech Suport And About><h1><!DOCTYPE html>
+    <html>
+      <head>
+        <title>Hello, World!</title>
+        <link rel="stylesheet" href="styles.css" />
+      </head>
+      <body>
+          <h1 class="title">Hello World! </h1>
+          <p id="currentTime"></p>
+          <script src="script.js"></script>
+      </body>
+    </html></html>
