--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><title>Tech Suport And About><h1>html>
+<html><title><h1>Suport And About</h1><title>html>
     <html>
       <head>
         <title>Hello, World!</title>
