--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html><title><h1>Suport And About</h1><title>html>
     <html>
       <head>
-        <title>Hello, World!</title>
+        <title>tech support and contact me</title>
         <link rel="stylesheet" href="styles.css" />
       </head>
       <body>
-          <h1 class="title">Hello World! </h1>
+          <h1 class="title">tech </h1>
           <p id="currentTime"></p>
           <script src="script.js"></script>
       </body>
