--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<html><title><h1>Suport And About</h1><title>html>
-    <html>
-      <head>
-        <title>tech support and contact me</title>
-        <link rel="stylesheet" href="styles.css" />
-      </head>
-      <body>
-          <h1 class="title">tech </h1>
-          <p id="currentTime"></p>
-          <script src="script.js"></script>
-      </body>
-    </html></html>
+<html><title>tech support contact me and about<title>html>
