--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<html><h1>                      hi</h1></html>
-<title>tech support contact me and about
+<html>
+<title>Tech Support Contact Me And About</title>
+
+</html>
