--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <title>Tech Support Contact Me And About</title>
-hi miles uwu <ul>iopoipo</ul>
+<textarea name="" id="" cols="60" rows="90"></textarea>
 </html>
