--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <title>Tech Support Contact Me And About</title>
-<blockquote>miles you better call me tonight</blockquote>
+verson 0.1
 </html>
