--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <title>Tech Support Contact Me And About</title>
 verson 0.1
-<keygen>gg</keygen>
+<html> For Copyright Of This Website Tm</html>
 </html>
