--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<title>Tech Support Contact Me And About</title>
+<title>Tech Support Contact Me About And Suggest</title>
 verson 0.1
 <html>Back To Site<link rel="Back To Site" href="https://scratch.mit.edu/projects/922703647/"></html>
 <dt>css here miles</dt>
