--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ verson 0.1
 <html>Back To Site<link rel="Back To Site" href="https://scratch.mit.edu/projects/922703647/"></html>
 <dt>css here miles</dt>
 <html> For Copyright Of This Website Tm</html>
-<base href="">
+<base href="6">
 </html>
