--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ verson 0.1
 <dt>css here miles</dt>
 <html> For Copyright Of This Website Tm</html>
 <base href="6">
+<link rel="stylesheet" href="/css/css here miles">
 </html>
