--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <title>Tech Support Contact Me About And Suggest</title>
 <a href="https://scratch.mit.edu/projects/922703647/">Back To Site</a>
 verson 0.1
-<html> For Copyright Of This Website Tm</html>
+<html> For Copyright Of This Website™©</html>
 <link rel="stylesheet" href="/css/css here miles">
+<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">Contact Me</a>
+<html>2029winbr31@moundsviewschools.org</html>
 </html>
